# cadora

./: .gitignore  Cargo.toml  README.md  test_knots.rs  test_lm.rs
.github/workflows/: ci.yml
cadora-ui/: index.html  package-lock.json  package.json
cadora-ui/src/: App.tsx  index.css
cadora-ui/src-tauri/: Cargo.toml  tauri.conf.json
cadora-ui/src-tauri/src/: lib.rs
cadora-ui/src/components/: ModelTree.tsx  PropertyPanel.tsx  StatusBar.tsx  Toolbar.tsx  Viewport3D.tsx
crates/cadora-brep/: Cargo.toml
crates/cadora-brep/src/: builder.rs  lib.rs  operations.rs  primitives.rs  shape.rs  tessellation.rs
crates/cadora-constraints/: Cargo.toml
crates/cadora-constraints/src/: lib.rs
crates/cadora-core/: Cargo.toml
crates/cadora-core/src/: lib.rs
crates/cadora-diagnosis/: Cargo.toml
crates/cadora-diagnosis/src/: lib.rs
crates/cadora-document/: Cargo.toml
crates/cadora-document/src/: document.rs  expression.rs  lib.rs  object.rs  placement.rs  property.rs  transaction.rs
crates/cadora-geo/: Cargo.toml
crates/cadora-geo/src/: curve.rs  lib.rs
crates/cadora-io/: Cargo.toml
crates/cadora-io/src/: iges.rs  lib.rs  project.rs  step.rs  stl.rs
crates/cadora-math/: Cargo.toml
crates/cadora-math/src/: lib.rs
crates/cadora-partdesign/: Cargo.toml
crates/cadora-partdesign/src/: body.rs  datum.rs  feature.rs  lib.rs
crates/cadora-sketch/: Cargo.toml
crates/cadora-sketch/src/: analysis.rs  constraint.rs  editing.rs  external.rs  geometry.rs  lib.rs  operations.rs  persistence.rs  sketch.rs  types.rs
crates/cadora-sketch/tests/: freecad_comparison.rs
crates/cadora-solvers/: Cargo.toml
crates/cadora-solvers/src/: lib.rs
crates/cadora-subsystem/: Cargo.toml
crates/cadora-subsystem/src/: lib.rs
crates/cadora-system/: Cargo.toml
crates/cadora-system/benches/: solver_bench.rs
crates/cadora-system/src/: lib.rs
crates/cadora-system/tests/: integration.rs
docs/: architecture.md  index.html  memory_audit.md  parallelization_audit.md  progress.html  progress_new.html  roadmap.md
