[package]
name = "cadora-app"
version = "0.1.0"
description = "Cadora CAD Application"
authors = ["Lovro Rakar"]
license = "LGPL-2.1-or-later"
repository = "https://github.com/lrakar/cadora"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"

# Cadora backend crates
cadora-core = { path = "../../crates/cadora-core" }
cadora-brep = { path = "../../crates/cadora-brep" }
cadora-document = { path = "../../crates/cadora-document" }
cadora-io = { path = "../../crates/cadora-io" }
cadora-partdesign = { path = "../../crates/cadora-partdesign" }
cadora-sketch = { path = "../../crates/cadora-sketch" }

truck-modeling = "0.6"
