[package]
name = "cadora-document"
description = "Document model — properties, objects, dependency graph, undo/redo (FreeCAD App layer equivalent)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nalgebra = { workspace = true }
petgraph = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
