[package]
name = "cadora-geo"
description = "Geometry primitives: Line, Circle, Arc, Ellipse, Hyperbola, Parabola, BSpline"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cadora-core = { workspace = true }
cadora-math = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
