[package]
name = "cadora-io"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "File format & I/O for CADORA CAD: .cadora project files, STEP, STL, IGES"

[dependencies]
cadora-brep = { path = "../cadora-brep" }
cadora-document = { path = "../cadora-document" }
truck-modeling = "0.6"
truck-topology = "0.6"
truck-stepio = "0.3"
truck-polymesh = "0.6"
truck-meshalgo = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
approx = { workspace = true }
tempfile = "3"
