[package]
name = "cadora-partdesign"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PartDesign feature framework for CADORA CAD (Body, Feature, Pad, Pocket, etc.)"

[dependencies]
cadora-brep = { path = "../cadora-brep" }
cadora-document = { path = "../cadora-document" }
truck-modeling = "0.6"
cgmath = "0.18"

[dev-dependencies]
approx = { workspace = true }
