[package]
name = "cadora-solvers"
description = "BFGS, Levenberg-Marquardt, DogLeg, line search, dual-system SQP"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cadora-core = { workspace = true }
cadora-subsystem = { workspace = true }
nalgebra = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
cadora-constraints = { workspace = true }
