[package]
name = "cadora-system"
description = "System orchestrator: graph partitioning, initSolution, solve, diagnose"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cadora-core = { workspace = true }
cadora-math = { workspace = true }
cadora-geo = { workspace = true }
cadora-constraints = { workspace = true }
cadora-subsystem = { workspace = true }
cadora-solvers = { workspace = true }
cadora-diagnosis = { workspace = true }
petgraph = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
tracing-subscriber = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "solver_bench"
harness = false
